2004-10-21  Mark Baushke  <mdb@cvshome.org>

	* Makefile.am (all-local): Fix typo.
	* Makefile.in: Regenerated.
	
2004-10-21  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.mak: Regenerated for "../zlib/lib.dsp" change.

2004-10-20  Mark D. Baushke  <mdb@cvshome.org>

	* sunos57-select.c: New file. Work around Solaris 7 select()
	hang.
	* Makefile.in: Regenerate for new configure.in.

2004-10-18  Derek Price  <derek@ximbiot.com>

	* system.h: Define DEVNULL here when necessary.  Don't include
	unistd.h twice.

2004-10-16  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Add "vasprintf.c" and "vasprintf.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" change.
	* libcvs.mak: Regenerate for "libcvs.dsp" change.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* asprintf.c, vasprintf.c, vasprintf.h: New files from GNULIB.

2004-10-15  Derek Price  <derek@ximbiot.com>

	* getpass.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add stat-macros.h.
	* stat.c: Update from GNULIB.
	* stat-macros.c: New file from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* nanosleep.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* memmove.c: Update from GNULIB.

2004-10-09  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Move minmax.h to its own section.

2004-10-07  Derek Price  <derek@ximbiot.com>

	* system.h: Reorganize slightly.

2004-10-07  Conrad T. Pino  <Conrad@Pino.com>

	* libcvs.dsp: Remove "xstrdup.c" from project.
	Add "strcasecmp.c", "getopt_.h" and "getopt_int.h" to project.
	* libcvs.dep: Regenerate for "libcvs.dsp" changes.
	* libcvs.mak: Regenerate for "libcvs.dsp" changes.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* system.h: Include getopt.h.

2004-10-06  Derek Price  <derek@ximbiot.com>

	* Makefile.am (libcvs_a_SOURCES): Add getpass.h.
	* getpass.h: New file from GNULIB.
	* getpass.c: Update from GNULIB.
