@@ -1,3 +1,7 @@
+2004-10-21  Derek Price  <derek@ximbiot.com>
+
+	* malloc.c: Update from GNULIB.
+
 2004-10-21  Mark Baushke  <mdb@cvshome.org>
 
 	* Makefile.am (all-local): Fix typo.
